--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "./node_modules/.bin/jest --coverage"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "lodash": "^4.17.4",
     "vue": "^2.3.3",
     "vue-router": "^2.7.0",
